# nora-remote-segmentation-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  main.py  main_3dslicer.py  main_previous_release.py  pyproject.toml  setup.sh  start.sh
docs/: serve_infra_analysis.md
src/: mock_session.py  prompt_manager.py  utils.py
tests/: config.py  test_performance.py
