[project]
name = "nora-remote-segmentation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "huggingface-hub>=0.33.0",
    "nninteractive>=1.0.1",
    "numpy>=2.2.6",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
    "xxhash>=3.5.0",
]
