[project]
name = "segmentation-server"
version = "0.1.0"
description = "A deep-learning based fastapi server for interactive 3d medical image segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "matplotlib>=3.10.7",
    "nninteractive>=1.1.2",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
    "psutil>=7.1.3"
]
